--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
         <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
         <img class="lead__image" src="./images/lead-polka.jpg" alt="Спящая девушка в вагоне">
         <p class="lead__caption">ваша полка — верхняя</p>
-        <div class="intro">
+      </section>
+      <section class="intro centralization-block">
+        <div class="intro__wrapper">
           <h2 class="intro__title">Чего мы там не&nbsp;видели?</h2>
           <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36%
             планируют провести отпуск в родной стране. Мол, чего мы тут, дома, не видели?
@@ -42,40 +44,36 @@
             усадила их в свою «Ладу» и проехала 20 тысяч километров по родной стране.
             Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.</p>
           <ul class="intro__list">
-            <li>Часовых поясов 11</li>
-            <li>Объектов природного наследия ЮНЕСКО 12</li>
-            <li>Объектов культурного наследия ЮНЕСКО 16</li>
-            <li>Природных заповедников 105</li>
-            <li>Аэропортов 241</li>
+            <li>Часовых поясов <span class="intro__list-number">11</span></li>
+            <li>Объектов природного наследия ЮНЕСКО <span class="intro__list-number">12</span></li>
+            <li>Объектов культурного наследия ЮНЕСКО <span class="intro__list-number">16</span></li>
+            <li>Природных заповедников <span class="intro__list-number">105</span></li>
+            <li>Аэропортов <span class="intro__list-number">241</span></li>
           </ul>
         </div>
       </section>
       <section class="photo-grid centralization-block">
         <ul class="photo-grid__wrapper">
-          <li><img class="photo-grid__item" src="./images/photo-grid-train.jpg" 
-            alt="окно в поезде c видом на море"></li>
+          <li><img class="photo-grid__item" src="./images/photo-grid-train.jpg" alt="окно в поезде c видом на море">
+          </li>
           <li><img class="photo-grid__item" src="./images/photo-grid-atharva-tulsi.jpg"
-            alt="вид свысока на горы с облаками"></li>
+              alt="вид свысока на горы с облаками"></li>
           <li><img class="photo-grid__item" src="./images/photo-grid-tuman.jpg"
-            alt="вид на туманное поле с сеновалом и немецкой овчаркой"></li>
+              alt="вид на туманное поле с сеновалом и немецкой овчаркой"></li>
           <li><img class="photo-grid__item" src="./images/photo-grid-sochi.jpg"
-            alt="вид свысока на туманный хвойный лес"></li>
-          <li><img class="photo-grid__item" src="./images/photo-grid-arisa.jpg" 
-            alt="колесо машины на льду"></li>
+              alt="вид свысока на туманный хвойный лес"></li>
+          <li><img class="photo-grid__item" src="./images/photo-grid-arisa.jpg" alt="колесо машины на льду"></li>
           <li><img class="photo-grid__item" src="./images/photo-grid-baikal.jpg"
-            alt="вид берега у моря с виднеющимися горами"></li>
-          <li><img class="photo-grid__item" src="./images/photo-grid-elbrus.jpg" 
-            alt="вид на заснеженную гору"></li>
+              alt="вид берега у моря с виднеющимися горами"></li>
+          <li><img class="photo-grid__item" src="./images/photo-grid-elbrus.jpg" alt="вид на заснеженную гору"></li>
           <li><img class="photo-grid__item" src="./images/photo-grid-kondratiev.jpg"
-            alt="знак пешеходного перехода на фоне волнорезов"></li>
+              alt="знак пешеходного перехода на фоне волнорезов"></li>
           <li><img class="photo-grid__item" src="./images/photo-grid-kamchatka-1.jpg"
-            alt="вид свысока на туманную гору"></li>
+              alt="вид свысока на туманную гору"></li>
           <li><img class="photo-grid__item" src="./images/photo-grid-kamchatka-2.jpg"
-            alt="зеленное поле с виднеющимися горами"></li>
-          <li><img class="photo-grid__item" src="./images/photo-grid-baikal-2.jpg" 
-            alt="вид на заснеженную гору"></li>
-          <li><img class="photo-grid__item" src="./images/photo-grid-ergaki.jpg" 
-            alt="вид свысока на туманную гору">
+              alt="зеленное поле с виднеющимися горами"></li>
+          <li><img class="photo-grid__item" src="./images/photo-grid-baikal-2.jpg" alt="вид на заснеженную гору"></li>
+          <li><img class="photo-grid__item" src="./images/photo-grid-ergaki.jpg" alt="вид свысока на туманную гору">
           </li>
         </ul>
       </section>
@@ -176,14 +174,13 @@
         </article>
       </section>
       <section class="cover centralization-block">
-        <a class="cover__link" href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank">
-          <img class="cover__image" src="./images/cover-trains.jpg" alt="депо на закате">
-        </a>
-        <div class="cover__content">
-          <h2 class="cover__title">До&nbsp;Байкала «на&nbsp;собаках»</h2>
-          <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на
-            электричках.</p>
-        </div>
+          <a class="cover__link" href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank">
+            <div class="cover__content">
+              <h2 class="cover__title">До&nbsp;Байкала «на&nbsp;собаках»</h2>
+              <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на
+                электричках.</p>
+            </div>
+          </a>
       </section>
     </main>
     <footer class="footer centralization-block">
